# mlir-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
CMake/: CompileOptions.cmake  project_config.cmake
Includes/: CMakeLists.txt
Includes/Conversions/ExampleConversion/: ExampleConversion.hpp
Includes/Dialects/: CMakeLists.txt  Traits.hpp
Includes/Dialects/SampleDialect/: CMakeLists.txt  SampleDialect.hpp  SampleOps.hpp
Includes/Dialects/SampleDialect/ODS/: CMakeLists.txt  Sample.td  SampleDialect.td  SampleDialectCanonicalization.td  SampleOps.td
Includes/Interfaces/: CMakeLists.txt  SampleInterface.hpp  SampleInterface.td
Includes/Types/: Types.hpp
Includes/Types/ODS/: Types.td
Scripts/docker/: env.dockerfile
Sources/: CMakeLists.txt
Sources/Conversions/: CMakeLists.txt
Sources/Conversions/SampleConversion/: CMakeLists.txt  SampleConversion.cpp
Sources/Dialects/: CMakeLists.txt
Sources/Dialects/SampleDialect/: CMakeLists.txt  SampleDialect.cpp  SampleOps.cpp
Sources/Interfaces/: CMakeLists.txt  SampleInterface.cpp
Sources/Types/: CMakeLists.txt  Types.cpp
Tests/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt
Tests/lit/: CMakeLists.txt  lit.cfg.py
mlir-template-opt/: CMakeLists.txt  mlir-template-opt.cpp
mlir-template-translate/: CMakeLists.txt  mlir-template-translate.cpp
